# FarmingGame

./: .gitignore  Bonus_Points.txt  CMakeLists.txt  README.md  git上传提示.txt  ~$类设计.docx  学习cocos2d-x.txt  待完成任务.txt  环境配置.txt  类设计.docx
Classes/: AppDelegate.cpp  AppDelegate.h  Audio.cpp  DocumentManager.cpp  DocumentManager.h  GameFacade.cpp  GameFacade.h  MainScene.cpp  MainScene.h  NullItem.h  RealItem.cpp  RealItem.h
Classes/Display/: Audio.cpp  Audio.h  HandleNextScene.cpp  HandleNextScene.h  MapLayer.cpp  MapLayer.h  PlayerSprite.cpp  PlayerSprite.h  SceneManager.cpp  SceneManager.h  UILayer.cpp  UILayer.h  UIManager.cpp  UIManager.h
Classes/GameLogic/: PlayerSprite.cpp  PlayerSprite.h  SaveManager.cpp  SaveManager.h
Classes/HelperClasses/: DocumentManager.cpp  DocumentManager.h  GridComputer.h  HelperClasses.h  MovementStrategy.cpp  MovementStrategy.h  TimeManager.cpp  TimeManager.h  item.h
Classes/Object/: Animal.cpp  Animal.h  Crop.cpp  Crop.h  FishPond.cpp  FishPond.h  Gate.cpp  Gate.h  Land.cpp  Land.h  MapObject.cpp  MapObject.h  MapObjectFactory.cpp  MapObjectFactory.h  Mineral.cpp  Mineral.h  NPC.cpp  NPC.h  Object.cpp  Object.h
Classes/SceneLayer/: CollideManager.cpp  CollideManager.h  MapCreator.cpp  MapCreator.h  MapLayer.h  MapManager.cpp  MapManager.h  PlayerController.h
Classes/UILayer/: UIController.cpp  UICreator.cpp  UICreator.h  UILayer.cpp  UILayer.h  UIManager.cpp  UIManager.h
Classes/UILogic/: MainCharacter.cpp  MainCharacter.h  UILogic.cpp  UILogic.h
Classes/examples/: CreatorReader.cpp  CreatorReader.h  MainScene.cpp
Classes/reader/: CMakeLists.txt
Classes/reader/dragonbones/: CMakeLists.txt
Classes/reader/dragonbones/cocos2dx/: CCArmatureDisplay.cpp  CCFactory.cpp  CCSlot.cpp
Document Description/: DocumentManager使用说明.docx  Gate使用说明.docx  HelperClasses.h使用说明.docx  Land使用说明.docx  MapLayer使用文档.docx  Object使用文档.docx  Resources使用说明.docx  SceneManager使用文档.docx  TimeManager使用说明.docx  游戏功能说明.docx  项目架构说明.docx
Document Description/refactoring/: Report.md
Document Description/类设计/: DocumentManager使用说明.docx  Resources使用说明.docx  SceneManager使用文档.docx  类设计.docx
Resources/: NewUsrArchive.json  NewUsrConfig.json  example.json  global.json
Resources/Json/: Example.json  Town.json  chicken_house.json
Resources/TiledMap/: MainUI.json
Resources/UI/: MainUI.json
Resources/config/: Abigail.json  Abigail_festival.json  Caroline.json  Haley.json  Haley_festival.json  Land.json  beach.json  chicken.json  chicken_house.json  cow.json  crop_cauliflower.json  crop_potato.json  crop_pumpkin.json  farm.json  gate.json  introduction.json  mine.json  mineral_iron.json  mineral_stone.json  npc1house.json  npc2house.json  player.json  player_house.json  player_movement.json  test.json  town.json  town_festival.json
Resources/plist/: Abigail.plist  Caroline.plist  Haley.plist  Land.plist  (+10 more)
proj.android/: settings.gradle
proj.win32/: FarmingGame.sln
(+34 files in other folders)
